gatekeeper/templates/require-non-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredNonRoot
metadata:
  name: require-non-root
spec:
  match:
    excludedNamespaces:
    - kube-system
    - kube-node-lease
    - gatekeeper-system
    namespaceSelector:
      matchLabels:
        enforce-non-root: "true"
  parameters:
    exemptImages:
    - gcr.io/gatekeeper-library/*
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequirednonroot
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredNonRoot
      validation:
        openAPIV3Schema:
          properties:
            exemptImages:
              description: Any container image matching the pattern will be exempt from enforcement
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirednonroot

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not is_exempt(container)
          not container.securityContext.runAsNonRoot
          msg := sprintf("Container %v must have runAsNonRoot set to true", [container.name])
        }

        is_exempt(container) {
          exempt_images := object.get(input, ["parameters", "exemptImages"], [])
          image := container.image
          exempt_images[_] == image
        }
